# fullstack-rust-auth

./: .gitignore  README.md
backend/: Cargo.toml
backend/src/: main.rs  mod.rs
backend/src/components/: db.rs  mod.rs
backend/src/components/authentication/: create_data.rs  database.rs  get_otp.rs  mod.rs  models.rs
backend/src/components/authentication/validate_aut_data/: create_new_user.rs  create_session.rs  get_new_token.rs  login_get_otp.rs  login_otp_validation.rs  mod.rs  validate_otp.rs
backend/src/components/router/: main_router.rs  mod.rs
backend/src/components/router/middleware/: auth_middleware.rs
backend/src/components/utils/user_authentication/: decode_token.rs  decrypt_encrypted_token.rs  generate_encrypted_token.rs  generate_password_token.rs  get_real_ip.rs  get_token.rs  is_valid_password.rs  mod.rs  password_utils.rs  send_mail.rs
backend/src/config/: cors_config.rs  mod.rs
backend/src/sql/: README.md  sample_qurey.sql
frontend/: Cargo.toml  Trunk.toml  index.html  style.scss
frontend/src/: lib.rs
frontend/src/components/: header.scss  main_template.rs  main_template.scss  mod.rs  routes.rs  sidebar.rs  sidebar.scss
frontend/src/components/api_hook/: authentication_api.rs  mod.rs
frontend/src/components/api_hook/middleware/: authentication_api.rs
frontend/src/components/config/: api_path.rs
frontend/src/components/function_hook/: error_class.rs  field_validation.rs  mod.rs  parse_api_response.rs  trigger_snack.rs
frontend/src/components/home/: main_home.rs  mod.rs
frontend/src/components/login_and_signin/: login.rs  main_login_and_signin.rs  main_login_and_signin.scss  mod.rs  sign_up.rs  verify_otp.rs
frontend/src/components/login_and_signin/otp_and_password/: enter_password.rs  mod.rs  otp.rs
frontend/src/components/profile/: main_profile.rs  mod.rs
frontend/src/components/router/: main_router.rs  mod.rs
frontend/src/components/settings/: main_settings.rs  mod.rs
frontend/src/components/types/: auth.rs
frontend/src/components/utils/: main_util.scss  mod.rs
frontend/src/components/utils/auth/: is_valid_password.rs  manage_cookie.rs  mod.rs
frontend/src/components/utils/loading/: loding_default.rs  loding_default.scss  mod.rs
frontend/src/context/: loading_provider.rs  mod.rs
frontend/src/services/: mod.rs  request.rs  session.rs
frontend/src/snack_bar_context/: loading.rs  mod.rs  snack_bar.rs  snack_bar_provider.rs  snack_bar_provider.scss
frontend/styles/: icon.scss  main_styles.scss  textfield.scss
