[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-rt = "2.5"
env_logger = "0.11"
lettre = "0.11.6"
tokio = { version = "1.37", features = ["full"] } 
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
dotenvy = "0.15.7"



