[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-rt = "2.5"
env_logger = "0.11"
lettre = "0.11.6"
tokio = { version = "1.37", features = ["full"] } 
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
rand = "0.8"
serde_json = "1.0"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
aes-gcm = "0.10"
aes = "0.8"
base64 = "0.21"
hex = "0.4"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"

