[package]
name = "rust_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.0"
actix-cors = "0.6"
actix-rt = "2.5"
env_logger = "0.11"
lettre = { version = "0.11.17", default-features = false, features = [
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
] }
tokio = { version = "1.37", features = ["full"] }

# ✅ Fix: enable uuid support in tokio-postgres
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }

# ✅ Ensure UUID deserialization works
postgres-types = { version = "0.2", features = ["uuid-1"] }

uuid = { version = "1", features = ["v4", "serde"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
chrono = "0.4.41"
aes-gcm = "0.10"
aes = "0.8"
base64 = "0.21"
hex = "0.4"
argon2 = "0.5"
password-hash = "0.5"
rand_core = "0.6"
actix-service = "2"
futures-util = "0.3"
once_cell = "1.19"


[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
