[package]
name = "yew_app"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }  # Or latest Yew version
yew-router = "0.18"
wasm-bindgen = "0.2"
web-sys = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
wasm-bindgen-futures = "0.4"
gloo-net = "0.5"
yew_icons = { version = "0.8", features = ["LucideArrowLeftCircle","LucideArrowRightCircle","LucideSun","LucideMoon","LucideHome","LucideSettings","LucideUser"] }
gloo = { version = "0.11", features = ["console"] }
